# dauto

./: .gitignore  404.html  LICENSE  Readme.md  cspell.json  index.html  mkdocs.yml  noxfile.py  pylliterate.yml  pyproject.toml  sitemap.xml
dauto/: __init__.py  admin.py  database.py  dauto.py  polymorphic.py  signals.py  volatile.py
dauto/__init__/: index.html
dauto/_utils/: using.py
dauto/_utils/__init__/: index.html
dauto/_utils/using/: index.html
dauto/admin/: index.html
dauto/database/: index.html
dauto/drf/: __init__.py  permission.py  reverse.py  serializers.py  throttling.py  versioning.py
dauto/drf/__init__/: index.html
dauto/drf/permission/: index.html
dauto/drf/restql/: __init__.py  fields.py
dauto/drf/reverse/: index.html
dauto/drf/serializers/: index.html
dauto/drf/throttling/: index.html
dauto/drf/versioning/: index.html
dauto/drf/viewsets/: mixin.py  serializer.py
dauto/drf/viewsets/__init__/: index.html
dauto/drf/viewsets/mixin/: index.html
dauto/drf/viewsets/serializer/: index.html
dauto/polymorphic/: index.html
dauto/signals/: index.html
dauto/utils/: __init__.py  awaitable.py  events.py  singleton.py  using.py
dauto/utils/__init__/: index.html
dauto/utils/awaitable/: index.html
dauto/utils/events/: index.html
dauto/utils/singleton/: index.html
dauto/utils/using/: index.html
search/: search_index.json
tests/: events.py
