[project]
name = "dauto"
version = "0.1.0"

authors = [
    {name = "Jesús Enrique Fuentes González", email = "jesusefg12@gmail.com"},
]

description = "A toolkit for django common usecases"
readme = "Readme.md"
license = { file="LICENSE" }

requires-python  = ">= 3.12.0"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
