[project]
name = "dauto"
version = "0.1.1"

authors = [
    { name = "Jesús Enrique Fuentes González", email = "jesusefg12@gmail.com" },
]

description = "A toolkit for django common usecases"
readme = "Readme.md"
license = { file="LICENSE" }

requires-python  = ">= 3.12.0"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django"
]
dependencies = [
    "django"
]

[project.optional-dependencies]
rest=["djangorestframework"]
polymorphic=["django-rest-polymorphic"]
docs=[
    "pylliterate",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions"
]
all=[
    "packageName[rest,polymorphic,docs]"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
