[project]
name = "dauto"
version = "1.2.0"

authors = [
    { name = "Jesús Enrique Fuentes González", email = "jesusefg12@gmail.com" },
    { name = "José Javier Quesada Madrigal", email = "xocechka@gmail.com" },

]

description = "A toolkit for django common usecases"
readme = "Readme.md"
license = { file="LICENSE" }

requires-python  = ">= 3.12.0"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django"
]
dependencies = [
    "django",
]

[project.optional-dependencies]
rest=["djangorestframework"]
polymorphic-rest=["django-rest-polymorphic"]
polymorphic-model=["django-polymorphic"]
dev=[
    "nox>=2025.2.9"
]
docs=[
    "pylliterate",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions"
]
all=[
    "djangorestframework",
    "django-rest-polymorphic",
    "django-polymorphic",
    "pylliterate",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "nox>=2025.2.9"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
